# semra

./: .bumpversion.cfg  .cruft.json  .gitignore  .prettierignore  CITATION.cff  MANIFEST.in  README.md  justfile  pyproject.toml  semra.py  setup.cfg  tox.ini
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml  zizmor.yml
docs/source/: artifacts.rst  cli.rst  conf.py  cypher.rst  index.rst  installation.rst  io.rst  pipeline.rst  reference.rst  struct.rst  tutorial.rst  usage.rst
landscape/: README.md
landscape/anatomy/: README.md  priority_counts.tsv  stats.json
landscape/cell/: README.md  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json
landscape/complex/: README.md  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv
landscape/disease/: raw_counts.tsv  source_summary.tsv  stats.json
landscape/gene/: priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json
notebooks/: Inference Example.ipynb  gilda_reprocess.py  umls-inference-analysis.ipynb
notebooks/landscape/: README.md  landscape.py  run.sh
notebooks/landscape/anatomy/: README.md  anatomy-landscape.ipynb  configuration.json  counts.tsv  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json  summary.tsv
notebooks/landscape/cell/: README.md  cell-landscape.ipynb  configuration.json  counts.tsv  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json  summary.tsv
notebooks/landscape/complex/: README.md  complex-landscape.ipynb  configuration.json  counts.tsv  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json  summary.tsv
notebooks/landscape/disease/: README.md  configuration.json  counts.tsv  disease-landscape.ipynb  disease.ipynb  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json  summary.tsv
notebooks/landscape/gene/: README.md  configuration.json  counts.tsv  gene-landscape.ipynb  priority_counts.tsv  processed_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json  summary.tsv
notebooks/landscape/taxrank/: README.md  priority_counts.tsv  raw_counts.tsv  source_summary.tsv  stats.json
scripts/: Disease Landscape Comparison.ipynb  cancer_cell_reproduction.py  counts.tsv  disease.py  gilda_reprocess.py  raw_counts.tsv
scripts/anatomy/: anatomy-landscape.ipynb  anatomy.py  counts.tsv  raw_counts.tsv  stats.json
scripts/cell/: cell-landscape.ipynb  cell.py  cells.py  counts.tsv  raw_counts.tsv  stats.json  summary.tsv
scripts/cells/: cell-landscape.ipynb  cells.py  counts.tsv  raw_counts.tsv
scripts/complex/: complex-landscape.ipynb  complex.py  counts.tsv  raw_counts.tsv  summary.tsv
scripts/disease/: Disease Landscape Comparison.ipynb  counts.tsv  disease-landscape.ipynb  disease.py  raw_counts.tsv  stats.json  summary.tsv
scripts/gene/: counts.tsv  gene-landscape.ipynb  gene.py  raw_counts.tsv  stats.json  summary.tsv
src/semra/: __about__.py  __init__.py  __main__.py  api.py  cancer_cell_reproduction.py  cli.py  client.py  constants.py  database.py  evaluate_prediction.py  gilda_utils.py  inference.py  io.py  neo4j_client.py  pipeline.py  rules.py  sources.py  struct.py  summarize.py  utils.py  version.py  vocabulary.py  wsgi.py
src/semra/analysis/: __init__.py  landscape.py
src/semra/io/: __init__.py  graph.py  io.py  io_utils.py  neo4j_io.py
src/semra/io/templates/: Dockerfile  run_on_startup.sh  startup.sh
src/semra/landscape/: __init__.py  __main__.py  anatomy.py  cell.py  cells.py  chemical.py  cli.py  complex.py  complexes.py  disease.py  diseases.py  education_level.py  gene.py  genes.py  instrument.py  summarize.py  taxrank.py  update_docs.py  utils.py
src/semra/sources/: __init__.py  __main__.py  biopragmatics.py  cbms2019.py  chembl.py  cli.py  clo.py  compath.py  famplex.py  gilda.py  intact.py  ncit.py  omim.py  pubchem.py  wikidata.py
src/semra/templates/: base.html  concept.html  config-summary.md  home.html  landscape-header.rst  landscape-readme.md  mapping.html  mapping_set.html  raw-database-readme.md  utils.html
src/semra/web/: __init__.py  fastapi_components.py  flask_components.py  shared.py
src/semra/web/autocomplete/: __init__.py  autocomplete_blueprint.py
tests/: __init__.py  constants.py  test_api.py  test_io.py  test_landscape.py  test_neo4j_output.py  test_pipeline.py  test_utils.py  test_web.py
tests/resources/: __init__.py  concept_nodes.tsv  edges.tsv  evidence_nodes.tsv  mapping_edges.tsv  mapping_nodes.tsv  mapping_set_nodes.tsv
