[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semra"
dynamic = ["version"]
description = 'Semantic Mapping Reasoning Assembler'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Charles Tapley Hoyt", email = "cthoyt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pystow",
  "pandas",
  "pydantic",
  "tqdm",
  "more_itertools",
  "networkx",
  "bioregistry",
  "bioontologies",
  "pyobo",
  "typing_extensions",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "coverage",
]
web = [
    "fastapi",
    "uvicorn",
    "flask",
    "bootstrap_flask",
    "neo4j",
    "biomappings",
]


[project.urls]
Documentation = "https://github.com/biopragmatics/semra#readme"
Issues = "https://github.com/biopragmatics/semra/issues"
Source = "https://github.com/biopragmatics/semra"

[tool.hatch.version]
path = "src/semra/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black[jupyter]>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
  "pydantic",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive --ignore-missing-imports {args:src/semra tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore checks for making text in exceptions
  "EM102", "EM101",
  # Ignore pickle security warnings
  "S301",
  # Ignore upgrading type annotations
  "UP006", "UP007", "UP035",
  # Ignore shadowing python builtins (because we use 'license')
  "A001", "A002", "A003",
]
unfixable = [
  # Don't touch unused imports
  "F401",
  # Don't upgrade type annoations
  "UP006", "UP007", "UP035",
]

[tool.ruff.isort]
known-first-party = ["semra"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["semra", "tests"]
branch = true
parallel = true
omit = [
  "src/semra/__about__.py",
]

[tool.coverage.paths]
semra = ["src/semra", "*/semra/src/semra"]
tests = ["tests", "*/semra/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
