##########################
# Setup.py Configuration #
##########################
[metadata]
name = semra
version = 0.0.10-dev
description = Semantic mapping reasoner and assembler
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/biopragmatics/semra
download_url = https://github.com/biopragmatics/semra/releases
project_urls =
    Tracker = https://github.com/biopragmatics/semra/issues
    Source = https://github.com/biopragmatics/semra
    Documentation = https://semra.readthedocs.io

# Author information
author = Charles Tapley Hoyt
author_email = cthoyt@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_files =
    LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    snekpack
    cookiecutter
    sssom
    semantic mappings
    ontology merging

[options]
install_requires =
    pystow
    pandas
    pydantic
    tqdm
    more_itertools
    networkx
    bioregistry
    bioontologies
    pyobo
    typing_extensions
    zenodo_client
    ssslm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    coverage
web =
    fastapi
    uvicorn
    flask
    bootstrap_flask
    neo4j
    biomappings
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx_automodapi
    autodoc_pydantic
    texext


[options.entry_points]
console_scripts =
    semra = semra.cli:main


######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = semra
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/semra
    .tox/*/lib/python*/site-packages/semra

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == "__main__":
    if TYPE_CHECKING:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short

#######################
# MyPy Configuration  #
#######################
[mypy]
plugins = pydantic.mypy

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    # pickle
    S301
    # pickle
    S403
    S404
    S603
    # Line break before binary operator (conflicts with black)
    W503
    # Multiple statements on one line (conflicts with black)
    E704
    # whitespace before ':'  (conflicts with black)
    E203
    # Requests call without timeout
    S113
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/conf.py,
    build,
    dist,
    tests/fixtures/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    data
max-line-length = 120
max-complexity = 20
import-order-style = pycharm
application-import-names =
    semra
    tests
per-file-ignores =
    src/semra/wsgi.py:B008
